syntax = "proto3";

package payloads.response;

option java_package = "com.sachin.protobuf.payloads.response";
option java_multiple_files = true;

message SimpleResponse {
  string responseMessage = 1;
}
